--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body::-webkit-scrollbar {
 
 body {
   /* background-color: #020202; */
-  background-color: #000;
+  background-color: white;
 }
 
 body::-webkit-scrollbar-track {
