--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,11 +129,13 @@ body::-webkit-scrollbar-thumb {
   font-size: 13px;
   text-transform: uppercase;
   font-family: "Raleway", sans-serif;
-  color: #fff;
+  color: #D19A23;
+  font-weight: bold;
 }
 
 .navigation .nav-link:hover {
-  color: #e45c0c;
+  color: #EDBE6C;
+  font-weight: bold;
 }
 
 .navigation .nav-link:focus {
@@ -158,7 +160,7 @@ body::-webkit-scrollbar-thumb {
   border: 2px solid #e45c0c;
   border-radius: 100px;
   text-decoration: none;
-  color: #fff;
+  color: black;
   font-size: 10px;
   transition: all 0.2s linear;
 }
@@ -2313,3 +2315,8 @@ q {
   justify-content: center;
 }
  }
+
+.logos{
+  height: 85px;
+  width:100%
+}
