--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ body::-webkit-scrollbar-thumb {
 
 .bg-pattern {
   position: relative;
-  padding: 10px 30px;
+  /* padding: 10px 30px; */
   /* z-index: 0;
   height: 100%;
   background-image: url(../images/body/body-bg.gif); */
@@ -324,7 +324,7 @@ body::-webkit-scrollbar-thumb {
   overflow: hidden;
   height: 150vh;
   width: 100%;
-  border-radius: 50px;
+  /* border-radius: 50px; */
 }
 
 .slide::before {
@@ -2317,6 +2317,6 @@ q {
  }
 
 .logos{
-  height: 85px;
+  height: 90px;
   width:100%
 }
