--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,19 +123,22 @@ body::-webkit-scrollbar-thumb {
 }
 
 .navigation .nav-link {
-  font-weight: 600;
+  font-weight: 500;
   position: relative;
   letter-spacing: 1px;
-  font-size: 13px;
+  font-size: 12px;
   text-transform: uppercase;
   font-family: "Raleway", sans-serif;
-  color: #D19A23;
-  font-weight: bold;
+  color: black;
+  
 }
 
 .navigation .nav-link:hover {
-  color: #EDBE6C;
+  background-color: #f0eaea;
+  border-radius: 3px;
+  color:black;
   font-weight: bold;
+  font-size: 12px;
 }
 
 .navigation .nav-link:focus {
@@ -322,7 +325,7 @@ body::-webkit-scrollbar-thumb {
 .slider {
   position: relative;
   overflow: hidden;
-  height: 150vh;
+  height: 85vh;
   width: 100%;
   /* border-radius: 50px; */
 }
@@ -563,7 +566,7 @@ body::-webkit-scrollbar-thumb {
   bottom: 0;
   z-index: 100;
   border-top-left-radius: 50px;
-  background-color: #000;
+  background-color: white;
 }
 
 @keyframes disk {
@@ -610,9 +613,10 @@ body::-webkit-scrollbar-thumb {
 /* about-section start */
 .section-size {
   position: relative;
-  max-width: 100%;
+  max-width: 90%; /* Reduced max width for better centering */
+  margin: 0 auto; /* Center align */
   height: auto;
-  padding: 20px;
+  padding: 20px 40px; /* Left and right padding for spacing */
 }
 
 .mt-space {
@@ -621,14 +625,6 @@ body::-webkit-scrollbar-thumb {
 
 .mb-space {
   margin-bottom: 60px;
-}
-
-.pt-space {
-  padding-top: 60px;
-}
-
-.pb-space {
-  padding-bottom: 60px;
 }
 
 .side-img-part,
@@ -650,7 +646,7 @@ body::-webkit-scrollbar-thumb {
 .about-section-card {
   position: absolute;
   max-width: 100%;
-  right: 0%;
+  right: 0;
   bottom: 0;
   z-index: 10;
 }
@@ -698,7 +694,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .about-txt-part {
-  padding: 20px 40px;
+  padding: 20px 40px; /* Added padding for better spacing */
 }
 
 .about-bottom-area {
@@ -711,6 +707,7 @@ body::-webkit-scrollbar-thumb {
   flex-wrap: wrap;
 }
 /* about-section end */
+
 
 /* circle-btn start */
 
@@ -828,7 +825,7 @@ a {
 
 .main-clk-btn {
   padding: 16px 45px;
-  background-color: #e45c0c;
+  background-color: #D19A23;
   border-radius: 200px;
   height: 100%;
   border: 2px solid #e45c0c;
@@ -2316,8 +2313,69 @@ q {
 }
  }
 
+
+
+ .navbar .container-fluid {
+  padding-inline: 4rem;
+  height: 60px;
+    }
+
 .logos{
-  height: 90px;
-  width:100%
+  height: 120px;
+  width:100%;
+  margin-top: 60px;
 }
 
+@media screen and (max-width: 768px) {
+  .logos{
+    height: 90px;
+    width:100%;
+    margin-top: 0px;
+    
+  }
+  .navbar .container-fluid {
+    padding-inline: 2rem;
+    height: 80px;
+    
+      }
+
+      .navigation .nav-link {
+        font-weight: 500;
+        position: relative;
+        letter-spacing: 1px;
+        font-size: 12px;
+        text-transform: uppercase;
+        font-family: "Raleway", sans-serif;
+        color: white;
+        
+      }
+
+      .navbar-collapse {
+        position: absolute;
+        background-color: rgba(0, 0, 0, 1);
+        backdrop-filter: blur(10px);
+        top: 105%;
+        width: 100%;
+        left: 0;
+        border-radius: 25px;
+        padding: 50px 30px;
+        transition: all 0.2s linear;
+        margin-top: 20px;
+      }
+    
+
+
+}
+
+
+.shades{
+  background: rgba(0,0,0,.43);
+  border-radius: 20px;
+  padding: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+}
+.smallhead{
+  color: #D19A23;
+}
