--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -233,7 +233,7 @@
   }
 
   footer {
-    padding: 50px 10px 0;
+    /* padding: 50px 10px 0; */
   }
 
   .about-img-box .about-img-box-main-img {
