--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,7 +1,7 @@
 @media (max-width: 991px) {
   .navbar-toggler {
     border: none;
-    background-color: #D49826;
+    background-color: #D19A23;
     padding: 10px;
   }
 
