--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #e45c0c;
+  background-color: #D19A23;
 }
 
 .dropdown:hover .dropdown-menu {
@@ -29,7 +29,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .dropdown-menu {
-  border-top: 2px solid #e45c0c !important;
+  border-top: 2px solid #D19A23 !important;
   border-radius: 0 !important;
   padding: 30px 10px;
   background-color: rgba(0, 0, 0, 0.8) !important;
@@ -37,7 +37,7 @@ body::-webkit-scrollbar-thumb {
 
 .dropdown-item:hover {
   background-color: transparent !important;
-  color: #e45c0c !important;
+  color: #D19A23 !important;
 }
 
 .bg-pattern {
@@ -63,7 +63,7 @@ body::-webkit-scrollbar-thumb {
 .company-name-heading {
   text-transform: uppercase;
   margin-right: 5px;
-  color: #e45c0c;
+  color: #D19A23;
 }
 
 .navbar-brand img {
@@ -113,7 +113,7 @@ body::-webkit-scrollbar-thumb {
 .nav-grid span:nth-child(1) {
   width: 50px;
   height: 50px;
-  background-color: #e45c0c;
+  background-color: #D19A23;
 }
 
 .navigation li:focus {
@@ -160,7 +160,7 @@ body::-webkit-scrollbar-thumb {
 
 .btn-inner {
   padding: 3px 20px;
-  border: 2px solid #e45c0c;
+  border: 2px solid #D19A23;
   border-radius: 100px;
   text-decoration: none;
   color: black;
@@ -174,7 +174,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .btn-inner:hover {
-  background-color: #e45c0c;
+  background-color: #D19A23;
   color: #fff;
   transition: all 0.2s linear;
 }
@@ -206,7 +206,7 @@ body::-webkit-scrollbar-thumb {
   justify-content: center;
   text-transform: capitalize;
   border: 3px solid #474545;
-  background-color: #e45c0c;
+  background-color: #D19A23;
 }
 
 .btn-inner b:focus {
@@ -437,7 +437,7 @@ body::-webkit-scrollbar-thumb {
   font-weight: 700;
   letter-spacing: 3px;
   margin-bottom: 20px;
-  color: #e45c0c;
+  color: #D19A23;
   text-transform: uppercase;
   font-size: 18px;
   margin-left: 5px;
@@ -479,7 +479,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .hero-btn-part.hero-small-btn .hero-btn-part-circle {
-  background-color: #e45c0c;
+  background-color: #D19A23;
   width: 60px;
   height: 60px;
   transition: all 0.3s linear;
@@ -521,7 +521,7 @@ body::-webkit-scrollbar-thumb {
   width: 80px;
   height: 80px;
   border-radius: 200px;
-  border: 2px solid #e45c0c;
+  border: 2px solid #D19A23;
   background-color: transparent;
   color: #fff;
   font-size: 22px;
@@ -536,12 +536,12 @@ body::-webkit-scrollbar-thumb {
 }
 
 .hero-btn-part:hover .hero-btn-part-circle {
-  background-color: #e45c0c;
+  background-color: #D19A23;
   transition: all 0.3s linear;
 }
 
 .hero-btn-part:hover .hero-btn-part-link {
-  color: #e45c0c;
+  color: #D19A23;
   transition: all 0.3s linear;
 }
 
@@ -721,7 +721,7 @@ body::-webkit-scrollbar-thumb {
   width: 70px;
   height: 70px;
   border-radius: 200px;
-  border: 2px solid #e45c0c;
+  border: 2px solid #D19A23;
   background-color: transparent;
   display: flex;
   justify-content: center;
@@ -758,7 +758,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .circle-btn-text h6 {
-  color: #e45c0c;
+  color: #D19A23;
   font-size: 16px;
   padding-bottom: 0px;
 }
@@ -787,7 +787,7 @@ a {
   font-weight: 700;
   letter-spacing: 3px;
   margin-bottom: 20px;
-  color: #e45c0c;
+  color: #D19A23;
   text-transform: uppercase;
   font-size: 18px;
   margin-left: 15px;
@@ -828,7 +828,7 @@ a {
   background-color: #D19A23;
   border-radius: 200px;
   height: 100%;
-  border: 2px solid #e45c0c;
+  border: 2px solid #D19A23;
   color: #fff;
   text-align: center;
   text-decoration: none;
@@ -1082,7 +1082,7 @@ a {
 .service-btn {
   padding: 21px 5px;
   background-color: #131414;
-  border: 2px solid #e45c0c;
+  border: 2px solid #D19A23;
   border-radius: 200px;
   color: #fff;
   opacity: 1;
@@ -1096,7 +1096,7 @@ a {
 
 .service-btn span {
   padding: 15px 18px;
-  background-color: #e45c0c;
+  background-color: #D19A23;
   border-radius: 200px;
 }
 
@@ -1169,7 +1169,7 @@ footer li a {
 }
 
 footer li a:hover {
-  color: #e45c0c;
+  color: #D19A23;
 }
 
 .social {
@@ -1183,11 +1183,11 @@ footer li a:hover {
 }
 
 .social a:hover {
-  color: #e45c0c;
+  color: #D19A23;
 }
 
 .copyright a {
-  color: #e45c0c;
+  color: #D19A23;
   text-decoration: none;
 }
 
@@ -1235,7 +1235,7 @@ footer li a:hover {
 .step-button[aria-expanded="true"] {
   width: 75px;
   height: 75px;
-  background-color: #e45c0c;
+  background-color: #D19A23;
   color: #fff;
   position: relative;
 }
@@ -1248,9 +1248,9 @@ footer li a:hover {
   border-radius: 200px;
   left: -7px;
   height: 90px;
-  background-color: #e45c0c;
+  background-color: #D19A23;
   color: #fff;
-  border: 2px solid #e45c0c;
+  border: 2px solid #D19A23;
   top: -7px;
   background-color: #131414;
 }
@@ -1280,7 +1280,7 @@ footer li a:hover {
 
 /* to customize progress bar */
 #progress::-webkit-progress-value {
-  background-color: #e45c0c;
+  background-color: #D19A23;
   transition: 0.5s ease;
 }
 
@@ -1390,7 +1390,7 @@ hr {
 }
 
 .bread {
-  background-color: #e45c0c;
+  background-color: #D19A23;
   padding: 15px 50px 0px;
   border: 5px solid #474545;
   border-radius: 200px;
@@ -1493,7 +1493,7 @@ hr {
 
 .form-submit-btn {
   padding: 15px 40px;
-  background-color: #e45c0c;
+  background-color: #D19A23;
   border-radius: 200px;
   color: #fff;
   text-align: center;
@@ -1673,7 +1673,7 @@ hr {
   width: 50px;
   height: 50px;
   border: none;
-  background-color: #e45c0c;
+  background-color: #D19A23;
   color: #fff;
   border-radius: 200px;
   z-index: 1000;
@@ -1822,7 +1822,7 @@ hr {
 
 .choose-card:hover .choose-card-header-img-inner {
   transform: scale(1.2, 1.2);
-  background-color: #e45c0c;
+  background-color: #D19A23;
   transition: all 0.2s linear;
 }
 
@@ -1891,7 +1891,7 @@ hr {
   left: 6%;
   bottom: -3%;
   border-radius: 100px;
-  background-color: #e45c0c;
+  background-color: #D19A23;
   position: absolute;
   z-index: -1;
 }
@@ -1968,7 +1968,7 @@ hr {
   position: absolute;
   bottom: 0px;
   width: 100%;
-  border: 1.5px solid #e45c0c;
+  border: 1.5px solid #D19A23;
   border-radius: 50%;
   height: 100%;
   left: 0px;
@@ -2143,7 +2143,7 @@ body {
 }
 
 .about-inner-collapse .accordion-button:not(.collapsed) {
-  color: #e45c0c;
+  color: #D19A23;
   background-color: transparent;
   box-shadow: none;
 }
