--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -103,7 +103,7 @@
 @media (max-width: 480px) {
   .bg-pattern {
     position: relative;
-    padding: 20px 10px;
+    /* padding: 20px 10px; */
   }
 
   .inner-about1-txt {
@@ -459,7 +459,7 @@
 @media (min-width: 481px) and (max-width: 767px) {
   .bg-pattern {
     position: relative;
-    padding: 20px 10px;
+    /* padding: 20px 10px; */
   }
 
   .inner-about1-txt {
@@ -589,7 +589,7 @@
   }
 
   footer {
-    padding: 50px 20px 0;
+    /* padding: 50px 20px 0; */
   }
 
   .about-img-box .about-img-box-main-img {
@@ -813,7 +813,7 @@
 @media (min-width: 768px) and (max-width: 991px) {
   .bg-pattern {
     position: relative;
-    padding: 20px 10px;
+    /* padding: 20px 10px; */
   }
 
   .inner-about1-txt {
@@ -943,7 +943,7 @@
   }
 
   footer {
-    padding: 50px 30px 0;
+    /* padding: 50px 30px 0; */
   }
 
   .about-img-box .about-img-box-main-img {
