--- a/lib/owlcarousel/assets/owl.carousel.css
+++ b/lib/owlcarousel/assets/owl.carousel.css
@@ -17,6 +17,7 @@
     position: relative;
     -ms-touch-action: pan-Y;
     -moz-backface-visibility: hidden;
+    max-height:350px; 
     /* fix firefox animation glitch */ }
   .owl-carousel .owl-stage:after {
     content: ".";
@@ -29,7 +30,7 @@
     position: relative;
     overflow: hidden;
     /* fix for flashing background */
-    -webkit-transform: translate3d(0px, 0px, 0px); }
+    -webkit-transform: translate3d(0px, 0px, 0px);}
   .owl-carousel .owl-wrapper,
   .owl-carousel .owl-item {
     -webkit-backface-visibility: hidden;
