--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2326,8 +2326,8 @@ q {
  }
 
 .logos{
-  height: 90px;
-  width:100%
+  /* height: 90px; */
+  width:70px;
 }
 
 
@@ -2337,18 +2337,19 @@ q {
 
  .navbar .container-fluid {
   padding-inline: 4rem;
-  height: 60px;
+  /* height: 60px; */
     }
 
 .logos{
-  height: 120px;
-  width:100%;
-  margin-top: 60px;
+  /* height: 120px; */
+  /* width:100%; */
+  height: 100%;
+  /* margin-top: 60px; */
 }
 
 @media screen and (max-width: 768px) {
   .logos{
-    height: 90px;
+    /* height: 90px; */
     width:100%;
     margin-top: 0px;
     
