--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1533,7 +1533,7 @@ hr {
 
 .inner-contact-img {
   width: 100%;
-  height: 550px;
+  height: 500px;
   object-fit: cover;
   border-radius: 5px;
 }
@@ -1562,7 +1562,13 @@ hr {
   font-size: 16px;
   font-family: "Inter", sans-serif;
 }
-
+@media(max-width:992px){
+  .form-link-txt{
+    flex-direction: column;
+    /* align-items: center; */
+    max-width: 100%;
+  }
+}
 .inner-contact-address {
   padding-top: 10px;
   max-width: 60%;
