--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2432,7 +2432,7 @@ q {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color:green;
+  background-color:black;
   animation: slideDown 2s forwards;
   
 }
