--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body::-webkit-scrollbar {
 body {
   /* background-color: #020202; */
   background-color: white;
+  overflow-x: hidden !important;
   
 }
 
