--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2426,7 +2426,7 @@ q {
 .whatsapp {
   position: fixed;
   bottom: 6.5rem; /* Start off screen */
-  right: 2px; /* Adjust as needed */
+  right: 1.4rem; /* Adjust as needed */
   z-index: 999;
   border-radius: 50%;
 
